syntax = "proto3";

message VerifierSecondStepProtoMsg {
    bytes verifierPubKey = 1;
    bytes secondStep = 2;
}